--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.23",
     "typescript": "~4.6.2"
   }
